updated meta data and style header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,35 @@
     <title>Educação para todos</title>
     <meta
       name="description"
-      content="Pensando em construir o futuro, como você solucionaria os problemas de acesso à educação hoje, utilizando a tecnologia?"
+      content="Pensando em construir o futuro, de forma a solucionar os problemas de acesso a educação, promovendo o trabalho colaborativo e incentivando a participação da comunidade."
+    />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://educacao-para-todos.vercel.app/" />
+    <meta property="og:title" content="Desafio DoWhile 2021" />
+    <meta
+      property="og:description"
+      content="Pensando em construir o futuro, de forma a solucionar os problemas de acesso a educação, promovendo o trabalho colaborativo e incentivando a participação da comunidade."
+    />
+    <meta
+      property="og:image"
+      content="https://educacao-para-todos.vercel.app/assets/img/bannerShare.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://educacao-para-todos.vercel.app/"
+    />
+    <meta property="twitter:title" content="Desafio DoWhile 2021" />
+    <meta
+      property="twitter:description"
+      content="Pensando em construir o futuro, de forma a solucionar os problemas de acesso a educação, promovendo o trabalho colaborativo e incentivando a participação da comunidade."
+    />
+    <meta
+      property="twitter:image"
+      content="https://educacao-para-todos.vercel.app/assets/img/bannerShare.png"
     />
 
     <link
@@ -37,8 +65,9 @@
           alt="logo educação"
         />
         <nav>
-          <a href="#sobre">Sobre</a>
+          <a href="#problema">Problema</a>
           <a href="#solucao">Solução</a>
+          <a href="#plataforma">Plataforma</a>
         </nav>
       </div>
     </header>
@@ -91,19 +120,19 @@
           </div>
         </div>
       </section>
-      <section data-scroll id="sobre">
+      <section data-scroll id="problema">
         <div class="containner grid">
           <div class="description">
             <h2>O problema</h2>
             <p>
               Durante a pandemia do COVID-19, pudemos observar o quanto a
               tecnologia pode se tornar essencial para a educação brasileira, e
-              o quanto as instituição não estavam preparadas para tal mudança
+              o quanto as instituições não estavam preparadas para uma mudança
               radical e inesperada.
             </p>
             <p>
               Conforme a pesquisa do Fundo das Nações Unidas para a infância
-              (Unicef), a taxa de evasão escolar aumentou certa de 5% para
+              (Unicef), a taxa de evasão escolar aumentou cerca de 5% para
               alunos do ensino fundamental e 10% no ensino médio. E o grande
               motivo foi a falta de conectividade para estes alunos.
             </p>
@@ -128,30 +157,28 @@
         </div>
       </section>
       <section data-scroll id="solucao">
-        <div class="solucao">
-          <div class="containner grid">
-            <div class="image">
-              <img
-                width="100%"
-                height="100%"
-                src="./assets/img/Online learning-cuate.svg"
-                alt=""
-              />
-            </div>
-            <div class="description">
-              <h2>Possivel resolução</h2>
-              <p>
-                A possível solução pensada para um problema tão complicado de se
-                solucionar alem da conectividade, foi, criar uma plataforma onde
-                a comunidade, instituições e empresas possam colaborar em
-                conjunto para levar a educação as pessoas com poucos recursos.
-              </p>
-              <p>
-                O intuito é promover a colaboração mutua entre as pessoas, para
-                fazer um mundo melhor e com mais oportunidades para aqueles que
-                não possuem.
-              </p>
-            </div>
+        <div class="containner grid">
+          <div class="image">
+            <img
+              width="100%"
+              height="100%"
+              src="./assets/img/Online learning-cuate.svg"
+              alt=""
+            />
+          </div>
+          <div class="description">
+            <h2>Possivel resolução</h2>
+            <p>
+              A possível solução pensada para um problema tão complicado de se
+              solucionar além da conectividade, foi, criar uma plataforma onde a
+              comunidade, instituições e empresas possam colaborar em conjunto
+              para levar a educação as pessoas com poucos recursos.
+            </p>
+            <p>
+              O intuito é promover a colaboração mútua entre as pessoas, para
+              fazer um mundo melhor e com mais oportunidades para aqueles que
+              não possuem.
+            </p>
           </div>
         </div>
       </section>
@@ -196,7 +223,7 @@
       <section data-scroll id="plataforma">
         <div class="containner plataforma">
           <h2>Como funcionária a plataforma</h2>
-          <div data-scroll class="plataforma-item">
+          <div data-scroll class="plataforma-item" title="escola">
             <span>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -237,7 +264,7 @@
               de eventos para serem palestrados na escola.
             </p>
           </div>
-          <div data-scroll class="plataforma-item">
+          <div data-scroll class="plataforma-item" title="empresas">
             <span>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -278,7 +305,7 @@
               apadrinhar alunos.
             </p>
           </div>
-          <div data-scroll class="plataforma-item">
+          <div data-scroll class="plataforma-item" title="comunidade">
             <span>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -314,12 +341,13 @@
               </svg>
             </span>
             <p>
-              A plataforma vai ter a possibilidade de localizar para pessoas
-              físicas que gostariam de comtribuir com o trabalho seja com
-              trabalho voluntario ou diaçao de equipamentos.
+              E como forma de incentivo aos estudantes, uma aba com incentivo
+              para que eles sejam protagonistas de suas histórias, podendo
+              ajudar outros alunos em dúvidas, projetos, ou, dando dicas
+              relatando suas conquista e como chegaram nelas.
             </p>
           </div>
-          <div data-scroll class="plataforma-item">
+          <div data-scroll class="plataforma-item" title="estudantes">
             <span>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
