--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
       <section data-scroll id="plataforma">
         <div class="containner plataforma">
           <h2>Como funcionária a plataforma</h2>
-          <div data-scroll class="plataforma-item" title="escola">
+          <div data-scroll class="plataforma-item" title="Escola">
             <span>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -264,7 +264,7 @@
               de eventos para serem palestrados na escola.
             </p>
           </div>
-          <div data-scroll class="plataforma-item" title="empresas">
+          <div data-scroll class="plataforma-item" title="Empresas">
             <span>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -305,7 +305,7 @@
               apadrinhar alunos.
             </p>
           </div>
-          <div data-scroll class="plataforma-item" title="comunidade">
+          <div data-scroll class="plataforma-item" title="Comunidade">
             <span>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -347,7 +347,7 @@
               relatando suas conquista e como chegaram nelas.
             </p>
           </div>
-          <div data-scroll class="plataforma-item" title="estudantes">
+          <div data-scroll class="plataforma-item" title="Estudantes">
             <span>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -393,16 +393,48 @@
       </section>
     </main>
     <footer>
-      <p>
-        Desenvolvido por
-        <a
-          href="https://www.linkedin.com/in/fcventura02/"
-          target="_blank"
-          rel="noopener noreferrer"
-          >Filipe Ventura</a
-        >
-        | 2021
-      </p>
+      <div class="containner">
+        <div>
+          <p>
+            Desenvolvido por
+            <a
+              href="https://www.linkedin.com/in/fcventura02/"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Filipe Ventura</a
+            >
+            | 2021
+          </p>
+        </div>
+        <div>
+          <a
+            title="Linkedin"
+            href="https://www.linkedin.com/in/fcventura02/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img
+              height="40"
+              width="40"
+              src="./assets/img/linkedin-icon.svg"
+              alt="Linkedin"
+            />
+          </a>
+          <a
+            title="Repositório do projeto no github"
+            href="https://github.com/fcventura02/educacao-para-todos"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img
+              height="40"
+              width="40"
+              src="./assets/img/github-icon.svg"
+              alt="repositório do projeto"
+            />
+          </a>
+        </div>
+      </div>
     </footer>
     <div class="loader loader--active">
       <div class="loader__icon">
