--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
       src="https://unpkg.com/scroll-out/dist/scroll-out.min.js"
     ></script>
     <script defer src="https://unpkg.com/scrollreveal"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-045GXL1W1L"
+    ></script>
+    <script src="./googleAnalytics.js"></script>
   </head>
   <body>
     <header>
