Update style and added divider page.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </head>
   <body>
     <header>
-      <div class="containner">
+      <div class="container">
         <img
           height="50"
           width="50"
@@ -71,9 +71,9 @@
           alt="logo educação"
         />
         <nav>
-          <a href="#problema">Problema</a>
-          <a href="#solucao">Solução</a>
-          <a href="#plataforma">Plataforma</a>
+          <a href="#problem">Problema</a>
+          <a href="#solution">Solução</a>
+          <a href="#platform">Plataforma</a>
         </nav>
       </div>
     </header>
@@ -88,7 +88,7 @@
             de acesso à educação hoje, utilizando a tecnologia?"
           </p>
           <div class="next-section">
-            <a href="#sobre" title="Próxima seção">
+            <a href="#problem" title="Próxima seção">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 x="0px"
@@ -126,8 +126,8 @@
           </div>
         </div>
       </section>
-      <section data-scroll id="problema">
-        <div class="containner grid">
+      <section data-scroll id="problem">
+        <div class="container grid">
           <div class="description">
             <h2>O problema</h2>
             <p>
@@ -161,9 +161,47 @@
             />
           </div>
         </div>
+        <div class="divider">
+          <svg
+            data-name="Layer 1"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 1200 120"
+            preserveAspectRatio="none"
+          >
+            <path
+              d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+              class="fill"
+            ></path>
+          </svg>
+        </div>
       </section>
-      <section data-scroll id="solucao">
-        <div class="containner grid">
+      <section data-scroll id="solution">
+        <div class="divider">
+          <svg
+            data-name="Layer 1"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 1200 120"
+            preserveAspectRatio="none"
+          >
+            <defs>
+              <linearGradient id="gradient" gradientTransform="rotate(370)">
+                <stop
+                  offset="0%"
+                  style="stop-color: rgba(0, 40, 179, 1); stop-opacity: 1"
+                />
+                <stop
+                  offset="85%"
+                  style="stop-color: rgba(38, 86, 255, 1); stop-opacity: 1"
+                />
+              </linearGradient>
+            </defs>
+            <path
+              d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+              fill="url('#gradient')"
+            ></path>
+          </svg>
+        </div>
+        <div class="container grid">
           <div class="image">
             <img
               width="100%"
@@ -187,9 +225,22 @@
             </p>
           </div>
         </div>
+        <div class="divider">
+          <svg
+            data-name="Layer 1"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 1200 120"
+            preserveAspectRatio="none"
+          >
+            <path
+              d="M1200 120L0 16.48 0 0 1200 0 1200 120z"
+              class="fill"
+            ></path>
+          </svg>
+        </div>
       </section>
       <section data-scroll>
-        <div class="containner">
+        <div class="container">
           <div class="objetivo">
             <div>
               <img
@@ -226,10 +277,10 @@
           </div>
         </div>
       </section>
-      <section data-scroll id="plataforma">
-        <div class="containner plataforma">
-          <h2>Como funcionária a plataforma</h2>
-          <div data-scroll class="plataforma-item" title="Escola">
+      <section data-scroll id="platform">
+        <div class="container platform">
+          <h2>Como funcionaria a plataforma</h2>
+          <div data-scroll class="platform-item" title="Escola">
             <span>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -270,7 +321,7 @@
               de eventos para serem palestrados na escola.
             </p>
           </div>
-          <div data-scroll class="plataforma-item" title="Empresas">
+          <div data-scroll class="platform-item" title="Empresas">
             <span>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -311,7 +362,7 @@
               apadrinhar alunos.
             </p>
           </div>
-          <div data-scroll class="plataforma-item" title="Comunidade">
+          <div data-scroll class="platform-item" title="Comunidade">
             <span>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -353,7 +404,7 @@
               relatando suas conquista e como chegaram nelas.
             </p>
           </div>
-          <div data-scroll class="plataforma-item" title="Estudantes">
+          <div data-scroll class="platform-item" title="Estudantes">
             <span>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -399,7 +450,7 @@
       </section>
     </main>
     <footer>
-      <div class="containner">
+      <div class="container">
         <div>
           <p>
             Desenvolvido por
