updated link submit form

--- a/index.html
+++ b/index.html
@@ -561,8 +561,9 @@
               </label>
             </div>
 
-            <input type="hidden" name="_next" value="http://127.0.0.1:5500/" />
+            <input type="hidden" name="_next" value="https://educacao-para-todos.vercel.app/" />
             <input type="hidden" name="_subject" value="Educação para todos." />
+            <input type="hidden" name="_autoresponse" value="Recebemos sua menssagem, obrigado pelo contato!" />
 
             <input type="submit" class="submit" value="Enviar" />
           </form>
