--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-045GXL1W1L"
     ></script>
-    <script src="./googleAnalytics.js"></script>
+    <script src="./scripts/googleAnalytics.js"></script>
   </head>
   <body>
     <header>
