update description comunity

--- a/index.html
+++ b/index.html
@@ -439,10 +439,9 @@
               </svg>
             </span>
             <p>
-              E como forma de incentivo aos estudantes, uma aba com incentivo
-              para que eles sejam protagonistas de suas histórias, podendo
-              ajudar outros alunos em dúvidas, projetos, ou, dando dicas
-              relatando suas conquista e como chegaram nelas.
+              Para a comunidade, será disponibilizado uma area em que as pessoas
+              podem se cadastrar como professores voluntários ou encontrar pontos de
+              coleta de doações.
             </p>
           </div>
           <div data-scroll class="platform-item" title="Estudantes">
@@ -482,8 +481,8 @@
             </span>
             <p>
               E como forma de incentivo aos estudantes, uma aba com incentivo
-              para que eles sejam protagonistas de suas historias, podendo
-              ajudar outros alunos em duvidas, projetos, ou, dando dicas
+              para que eles sejam protagonistas de suas histórias, podendo
+              ajudar outros alunos com dúvidas, projetos, ou, dando dicas
               relatando suas conquista e como chegaram nelas.
             </p>
           </div>
@@ -561,9 +560,17 @@
               </label>
             </div>
 
-            <input type="hidden" name="_next" value="https://educacao-para-todos.vercel.app/" />
+            <input
+              type="hidden"
+              name="_next"
+              value="https://educacao-para-todos.vercel.app/"
+            />
             <input type="hidden" name="_subject" value="Educação para todos." />
-            <input type="hidden" name="_autoresponse" value="Recebemos sua menssagem, obrigado pelo contato!" />
+            <input
+              type="hidden"
+              name="_autoresponse"
+              value="Recebemos sua menssagem, obrigado pelo contato!"
+            />
 
             <input type="submit" class="submit" value="Enviar" />
           </form>
